--- a/index.html
+++ b/index.html
@@ -155,9 +155,9 @@ transform: scale(1.5);
     <div class="container text-center">
       Anime
       <div class="row">
-        <div class="col-3">
+        <div class="col">
 
-        <div class="col-3">
+        <div class="col">
           <div class="card" style="width: 18rem">
             <img src="image/1.jpg" class="card-img-top" alt="..." />
             <div class="card-body">
@@ -170,7 +170,7 @@ transform: scale(1.5);
             </div>
           </div>
         </div>
-        <div class="col-3">
+        <div class="col">
           <div class="card" style="width: 18rem">
             <img src="image/2.jpg" class="card-img-top" alt="..." />
             <div class="card-body">
@@ -184,7 +184,7 @@ transform: scale(1.5);
           </div>
         </div>
 
-        <div class="col-3">
+        <div class="col">
           <div class="card" style="width: 18rem">
             <img src="image/3.jpg" class="card-img-top" alt="..." />
             <div class="card-body">
